reduce log spam if network monitor fails
This prevents spamming of the logs by the network interface device
monitor by:

- checking to make sure the device file exists before starting the
    monitoring task
- cancelling the task if it throws an exception